Actions
Bug #12221
closedarp: smatch errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
smatch errors:
/code/illumos-gate/usr/src/tools/proto/root_i386-nd/opt/onbld/bin/i386/smatch: ../../common/inet/arp/../inetddi.c:145 inet_attach() error: buffer overflow 'netdev_privs' 9 <= 9 (assuming for loop doesn't break) /code/illumos-gate/usr/src/tools/proto/root_i386-nd/opt/onbld/bin/i386/smatch: ../../common/inet/arp/../inetddi.c:146 inet_attach() error: buffer overflow 'netdev_privs' 9 <= 9 (assuming for loop doesn't break) /code/illumos-gate/usr/src/tools/proto/root_i386-nd/opt/onbld/bin/i386/smatch: ../../common/inet/arp/../inetddi.c:146 inet_attach() error: buffer overflow 'netdev_privs' 9 <= 9 (assuming for loop doesn't break)
Technically it is not about arp, but it is first one reporting:)
Testing done: build/install/boot - apparently the network is still working.
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 623c3de4b7886d5d3a70c856a27c13fe534b2b69
commit 623c3de4b7886d5d3a70c856a27c13fe534b2b69 Author: Toomas Soome <tsoome@me.com> Date: 2020-01-21T22:38:50.000Z 12221 arp: smatch errors Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Matthias Scheler <mscheler@tintri.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions