12221 arp: smatch errors Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Matthias Scheler <mscheler@tintri.com> Approved by: Dan McDonald <danmcd@joyent.com>